--- a/products/pom.xml
+++ b/products/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>exodus-demo</groupId>
         <artifactId>exodus-demo</artifactId>
-        <version>${revision}</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <modules>
