--- a/repositories/some-repository/integration-repository-some-repo/pom.xml
+++ b/repositories/some-repository/integration-repository-some-repo/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>exodus-demo.repositories</groupId>
         <artifactId>some-repository</artifactId>
-        <version>${revision}</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <dependencies>
