--- a/repositories/some-repository/pom.xml
+++ b/repositories/some-repository/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>exodus-demo.repositories</groupId>
         <artifactId>exodus-demo-repositories</artifactId>
-        <version>${revision}</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <modules>
