--- a/commons/core-common/pom.xml
+++ b/commons/core-common/pom.xml
@@ -12,4 +12,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
