--- a/products/some-service/delivery-boot-some-service/pom.xml
+++ b/products/some-service/delivery-boot-some-service/pom.xml
@@ -12,4 +12,16 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>exodus-demo.products</groupId>
+            <artifactId>core-business-some-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
