--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -6,12 +6,12 @@
     <groupId>exodus-demo.commons</groupId>
     <artifactId>exodus-demo-commons</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
 
     <parent>
         <groupId>exodus-demo</groupId>
         <artifactId>exodus-demo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <modules>
