--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <build.revision>SNAPSHOT</build.revision>
-        <revision>0.0.1</revision>
+        <revision>0.0.1-${build.revision}</revision>
 
         <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
